# devsecops-python-demo

./: Dockerfile  Makefile  README.md  app.py  buildspec.yml  pyproject.toml
