[tool.poetry]
name = "devsecops-python-demo"
version = "0.1.0"
description = "A sample devsecops app"
authors = ["andrewkrug <andrewkrug@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
